[project]
name = "wzry-skin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "fake-useragent>=2.2.0",
    "mashumaro[orjson]>=3.17",
    "orjson>=3.11.4",
]

[tool.ruff.lint]
extend-select = ['I']
